Updated README.md and Rescaffolded Player model.
Changed 'Player.name' to 'Player.username' which better fits with the new uniqueness requirement for the field. Devise will still handle email addesses, which will also need to be unique.

--- a/app/views/players/_player.html.erb
+++ b/app/views/players/_player.html.erb
@@ -1,7 +1,8 @@
 <div id="<%= dom_id player %>">
+  <%# TODO Implement a system that shows the username and display name in a sensible way, based on the use display name flag.%>
   <p>
-    <strong>Name:</strong>
-    <%= player.name %>
+    <strong>Username:</strong>
+    <%= player.username %>
   </p>
 
   <p>
