--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+    <%= form.label :username, style: "display: block" %>
+    <%= form.text_field :username %>
   </div>
 
   <div>
